フッターの修正

--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -1,3 +1,13 @@
+.shop-top-page {
+  display: flex;
+flex-flow: column;
+min-height: 100vh;
+}
+
+.shop-top-main {
+  flex: 1;
+}
+
 .shop-title {
   width: 100vw;
   height: 10vh;
