--- a/app/assets/stylesheets/owners/new.scss
+++ b/app/assets/stylesheets/owners/new.scss
@@ -1,5 +1,8 @@
 /* 共通 */
 .form-background {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
   background-size: cover;
 }
 
@@ -7,6 +10,7 @@
   width: 100vw;
   display: flex;
   justify-content: center;
+  flex: 1;
   overflow: scroll;
 }
 
