--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -31,7 +31,7 @@ min-height: 100vh;
   text-align: center;
   color: #fff;
   background-color: #000;
-  border: solid #cc0000 6px;
+  border: solid #ff006f 6px;
   font-size: 1.3em;
   text-decoration: none;
   margin-left: 5vw;
