--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,13 +1,35 @@
-<%= form_with model:@shop ,local: true do |form| %>
-  <%= render "shared/error_messages", model: form.object %>
+<div class='form-background shop-opening-back'>
+  <%= render "shared/title_header" %>
 
-  <div>
-    ショップ名
-    <%= form.text_field :name %>
+  <%= form_with model:@shop,  class: 'form-main', local: true do |form| %>
+  <div class='form shop-opening-form'>
+    <div class='shop-opening-background'>
+      <div class='form-header'>
+        <h2 class='form-title'>ショップ登録</h2>
+      </div>
+
+      <%= render "shared/error_messages", model: form.object %>
+
+      <div class='form-group'>
+        <div class='form-text-group'>
+          <label class='form-text'>ショップ名</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <%= form.text_field :name, placeholder: "重複するショップ名では登録できません", class: 'input-opening-shop opening-shop-name',autofocus: true %>
+      </div>
+      <div class='form-group'>
+        <div class='form-text-group'>
+          <label class='form-text'>ショップ情報</label>
+          <span class='indispensable'>必須</span>
+        </div>
+        <%= form.text_area :info, class: 'input-opening-shop opening-shop-info', placeholder: "ショップ説明（1,500字まで）（コンセプト、品揃えなど）" %>
+      </div>
+      <div class="form-button">
+        <%= form.submit "出店する", class: 'submit-button shop-opening-btn' %>
+      </div>
+    </div>
   </div>
-  <div>
-    店舗情報
-    <%= form.text_area :info %>
-  </div>
-  <%= form.submit "作成する" %>
-<% end %>
+  <% end %>
+
+  <%= render "shared/footer" %>
+</div>
