--- a/app/assets/stylesheets/items/search.css
+++ b/app/assets/stylesheets/items/search.css
@@ -1,4 +1,6 @@
 .search-result {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-flow: column;
   min-height: 100vh;
@@ -7,6 +9,7 @@
 .search-main {
   width: 100vw;
   flex: 1;
+  overflow: scroll;
 }
 
 .search-list-title {
