--- a/app/assets/stylesheets/orders/orders.scss
+++ b/app/assets/stylesheets/orders/orders.scss
@@ -4,7 +4,6 @@
 }
 
 .order-item {
-  width: 55vw;
   background-color: rgb(221, 215, 193);
 }
 
@@ -74,4 +73,8 @@
   background: #fff;
   font-size: 1em;
   resize: none;
+}
+
+.user-buying-btn {
+  border: 6px solid #cc0000;
 }
