--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -108,7 +108,7 @@
     </div>
 
     <div class="form-button">
-      <%= f.submit "購入", class: 'registration-button' %>
+      <%= f.submit "購入", class: 'submit-button user-buying-btn' %>
     </div> 
   </div>
   <% end %>
