--- a/app/assets/stylesheets/items/new.scss
+++ b/app/assets/stylesheets/items/new.scss
@@ -4,12 +4,7 @@
 }
 
 .item-for-sale {
-  width: 55vw;
   background-color:#f5f5f5;
-}
-
-.new-item-main {
-  padding: 10vh auto;
 }
 
 .click-upload {
@@ -18,7 +13,7 @@
   text-align: end;
 }
 
-.click-upload>p {
+.upload-attention {
   margin-bottom: 15px;
 }
 
