--- a/app/assets/stylesheets/owners/registration.scss
+++ b/app/assets/stylesheets/owners/registration.scss
@@ -1,5 +1,6 @@
 /* 共通 */
 .form-background {
+  height: 100vh;
   display: flex;
   flex-flow: column;
   min-height: 100vh;
@@ -15,6 +16,7 @@
 }
 
 .form {
+  width: 60vw;
   border: none;
   border-radius: 25px;
   padding: 3%;
@@ -114,11 +116,14 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
+  justify-content: center;
+  font-size: 1.1em;
 }
 
 .input-birth select {
   width: 20%;
   margin-top: 2vh;
+  margin-left: 1vw;
   height: 5vh;
   padding-left: 1vw;
   border-radius: 4px;
@@ -150,7 +155,6 @@
 }
 
 .owner-registration {
-  width: 45vw;
   background-color:#f5f5f5;
 }
 
