--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/title_header" %>
 
   <%= form_with model:@shop,  class: 'form-main', local: true do |form| %>
-  <div class='form shop-opening-form'>
+  <div class='form'>
     <div class='shop-opening-background'>
       <div class='form-header'>
         <h2 class='form-title'>ショップ登録</h2>
