--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,8 @@
 <% if model.errors.any? %>
-  <div>
-    <ul>
+  <div class='error-alert'>
+    <ul class='error-message-box'>
       <% model.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class='error-message'><%= message %></li>
       <% end %>
     </ul>
   </div>
