--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -18,25 +18,28 @@
       <%= image_tag 'bed_13.jpeg', alt: 'Bed画像', class: 'right-bottom' %>
 
       <div class='top-info'>
-        <h3 class='top-search' id='top-page-search'>
-        商品検索
-        </h3>
-        <%= render "shared/top_search" %>
+        <div class='top-info-scroll'>
+          <h3 class='top-search' id='top-page-search'>
+          商品検索
+          </h3>
 
-        <h3 class='top-shop' id='shops'>
-          shop一覧
-        </h3>
-        <ul class='shop-list hidden' id='shop-list'>
-          <% if @shops.present? %>
-            <% @shops.each do |shop| %>
-              <li>
-                <%= link_to shop.name, shop_items_path(shop.id) %>
-              </li>
+          <%= render "shared/top_search" %>
+
+          <h3 class='top-shop' id='shops'>
+            shop一覧
+          </h3>
+          <ul class='shop-list hidden' id='shop-list'>
+            <% if @shops.present? %>
+              <% @shops.each do |shop| %>
+                <li>
+                  <%= link_to shop.name, shop_items_path(shop.id) %>
+                </li>
+              <% end %>
+            <% else %>
+              shopを登録してください
             <% end %>
-          <% else %>
-            shopを登録してください
-          <% end %>
-        </ul>
+          </ul>
+        </div> 
       </div>
     </div>
   </div>
