--- a/app/assets/stylesheets/shared/search.css
+++ b/app/assets/stylesheets/shared/search.css
@@ -1,28 +1,80 @@
-.header-search-form {
+.header-search {
   width: 100vw;
+  padding: 0 3vw;
+}
+
+.header-search-form {
+  width: 100%;
   height: 7.5vh;
-  font-size: 1em;
+}
+
+.header-search-main {
+  width: 100%;
+  height: 7.5vh;
   display: flex;
-  justify-content: space-around;
   align-items: flex-end;
-  padding-bottom: 0.5vh;
 }
 
 .search-form {
+  width: 100%;
   flex-wrap: wrap;
-}
-
-.bottom-form {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  align-items: center;
 }
 
-.search-shop-name {
-  text-decoration: underline;
+.header-search-group {
+  width: 100%;
+}
+
+.header-search-text {
+  width: 100%;
+  align-items: flex-end;
+  font-size: 1em;
+}
+
+.header-search-input {
+  width: 70%;
+  height: 3.5vh;
+  border: 1px solid #888888;
+  background: #fff;
+  resize: none;
+}
+
+.search-form select {
+  width: 70%;
+  height: 3.5vh;
+  border: 1px solid #888888;
+  background: #fff;
+  font-size: 0.9em;
   cursor: pointer;
 }
 
-.hidden {
-  display: none;
+.header-search-field {
+  width: 100%;
+  text-align: center;
+}
+
+.header-search-price {
+  width: 38%;
+  height: 3.5vh;
+  border: 1px solid #888888;
+  background: #fff;
+  cursor: pointer;
+  font-size: 0.9em;
+  margin-left: 1%;
+  margin-right: 1%
+}
+
+.header-search-btn {
+  text-align: end;
+}
+
+.header-search-submit {
+  width: 40%;
+  background: rgb(70, 70, 70);
+  color: #fff;
+  height: 3.5vh;
+  font-size: 1em;
+  cursor: pointer;
 }
