--- a/app/assets/stylesheets/shops/index.css
+++ b/app/assets/stylesheets/shops/index.css
@@ -49,10 +49,10 @@
 }
 
 .left_bottom{
-  height: 51.5vh;
+  height: 52.5vh;
   width:  41.5vw;
   position: absolute;
-  top: 30.5vh;
+  top: 29.5vh;
   left: 6vw;
 }
 
@@ -65,32 +65,32 @@
 }
 
 .right-bottom{
-  height: 36.5vh;
-  width: 25vw;
+  height: 37.5vh;
+  width: 24vw;
   position: absolute;
-  top: 45.5vh;
+  top: 44.5vh;
   left: 52.5vw;
 }
 
 .top-info{
   position: absolute;
-  height: 36.5vh;
-  width: 13.5vw;
-  top: 45.5vh;
-  left: 80.5vw;
+  height: 37.5vh;
+  width: 16.5vw;
+  top: 44.5vh;
+  left: 78.5vw;
   font-size: 1.5em;
   cursor: pointer;
 }
 
-.top-search-form{
+.top-info-scroll {
+  width: 100%;
   height: 100%;
-  font-size: 0.7em;
   overflow: scroll;
 }
 
 .shop-list{
   height: 100%;
-  font-size: 0.7em;
+  font-size: 0.65em;
   overflow: scroll;
 }
 
