共通フォームクラス名変更

--- a/app/views/owners/registrations/new.html.erb
+++ b/app/views/owners/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/title_header" %>
 
   <%= form_with model: @owner, url: owner_registration_path, class: 'form-main', local: true do |f| %>
-  <div class='form owner-registration'>
+  <div class='form-field owner-registration'>
     <div class='form-header'>
       <h2 class='form-title'>オーナー登録</h2>
     </div>
