--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/title_header" %>
 
   <%= form_with model: @user, url: user_registration_path, class: 'form-main', local: true do |f| %>
-  <div class='form user-registration'>
+  <div class='form-field user-registration'>
     <div class='form-header'>
       <h2 class='form-title'>ユーザー登録</h2>
     </div>
