--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/title_header" %>
 
   <%= form_with model: @item_category, url: shop_items_path, class: 'form-main', local: true do |form| %>
-  <div class='form item-for-sale'>
+  <div class='form-field item-for-sale'>
     <div class='form-header'>
       <h2 class='form-title'>商品の出品</h2>
     </div>
