--- a/app/assets/stylesheets/shared/top_search.css
+++ b/app/assets/stylesheets/shared/top_search.css
@@ -1,19 +1,17 @@
 .top-search-form {
   width: 100%;
   height: 100%;
-  font-size: 0.6em;
+  font-size: 0.75em;
 }
 
 .top-search-group {
   width: 95%;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
 }
 
 .top-search-text {
   width: 95vw;
-  height: 2.8vh;
   align-items: flex-end;
 }
 
@@ -26,7 +24,6 @@
 }
 
 .top-search-group select {
-  width: 95%;
   height: 3vh;
   border: 1px solid #888888;
   background: #fff;
@@ -34,12 +31,30 @@
   cursor: pointer;
 }
 
+.top-search-shop {
+  width: 80%;
+}
+
+.top-category-color {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top-search-category {
+  width: 55%;
+}
+
+.top-search-color {
+  width: 40%;
+}
+
 .top-search-price {
-  width: 35%;
+  width: 40%;
   height: 3vh;
   border: 1px solid #888888;
   background: #fff;
   cursor: pointer;
+  font-size: 0.8em;
 }
 
 .top-search-button {
@@ -51,7 +66,7 @@
   width: 100%;
   background: rgb(70, 70, 70);
   color: #fff;
-  height: 3vh;
-  font-size: 1em;
+  height: 3.3vh;
+  font-size: 0.9em;
   cursor: pointer;
 }
