折り返し表示の実装

--- a/app/assets/stylesheets/items/search.css
+++ b/app/assets/stylesheets/items/search.css
@@ -20,10 +20,14 @@
 
 .list-item-name{
   font-size: 1.2em;
+  width: 100%;
+  overflow-wrap: break-word;
 }
 
 .list-shop-name{
   font-size: 0.7em;
+  width: 100%;
+  overflow-wrap: break-word;
 }
 
 .list-item-status{
