--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -7,22 +7,27 @@
 }
 
 .shop-top-main {
+  width: 100vw;
   flex: 1;
   overflow: scroll;
 }
 
 .shop-title {
-  width: 100vw;
-  height: 10vh;
+  width: 90vw;
   display: flex;
-  align-items: center;
+  margin: auto;
+  padding-top: 3vh;
+}
+
+.shop-title-name {
+  width: 70%;
+  overflow-wrap: break-word;
 }
 
 .shop-name {
-  font-size: 2.5em;
+  font-size: 2em;
   font-weight: bold;
   color: #000;
-  margin-left: 5vw;
   text-decoration: none;
 }
 
@@ -46,10 +51,10 @@
 }
 
 .shop-info {
-  width: 100vw;
-  height: 10vh;
-  font-size: 1.3em;
-  margin-left: 3vw;
+  width: 80vw;
+  font-size: 1.2em;
+  margin: 4vh auto;
+  overflow-wrap: break-word;
 }
 
 .item-lists {
@@ -81,8 +86,15 @@
 
 .shop-item-name {
   font-size: 1.1em;
+  width: 100%;
+  overflow-wrap: break-word;
 }
 
 .shop-item-status {
   font-size: 1em;
+}
+
+.shop-no-item {
+  font-size: 2em;
+  font-weight: bold;
 }
