--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -14,6 +14,7 @@
 
 .main-shop-name {
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .item-shop-name{
@@ -26,52 +27,48 @@
 
 .item-image-lists {
   width: 100vw;
-  height: 40vh;
+  height: 50vh;
   display: flex;
   justify-content: center;
 }
 
 .item-img {
-  width: 30vw;
-  height: 40vh;
+  width: 40vw;
+  height: 50vh;
 }
 
-.item-info {
-  width: 100vw;
-  height: 6vh;
-  display: flex;
-  align-items: center;
+.item-show-name {
+  width: 85%;
+  margin: 1vh auto;
 }
 
 .item-name {
   font-size: 1.6em;
-  margin-left: 5vw;
   font-weight: bold;
+  overflow-wrap: break-word;
 }
 
-.category {
-  margin-left: 5em;
-}
-
-
-.color {
-  margin-left: 5em;
+.item-info {
+  width: 85%;
+  display: flex;
+  margin: 0 auto;
 }
 
 .color-category{
   border-radius: 25px;
   border-style: solid;
   border-width: 1.5px;
-  margin: 0px 3px;
-  padding: 2px 5px;
-  text-align: center;
+}
+
+.color {
+  margin-left: 5vw;
 }
 
 .button {
   width: 100vw;
-  height: 7vh;
   display: flex;
   align-items: center;
+  margin: 1.5vh auto;
 }
 
 .display-item-price {
