--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -24,7 +24,7 @@
           <% end %>
         <% end %>
       <% else %>
-        該当する商品はありません
+        <p class='search-no-item'>該当する商品はありません</p>
       <% end %>
     </ul>
   </div>
