--- a/app/views/owners/registrations/edit.html.erb
+++ b/app/views/owners/registrations/edit.html.erb
@@ -123,8 +123,16 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>現在のパスワード(登録情報の変更にはパスワードが必要です)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :current_password, autocomplete: "current-password", class:"input-default", placeholder:"現在のパスワードを入力" %>
+    </div>
+
     <div class="form-button">
-      <%= f.submit "登録する", class: 'submit-button owner-registration-btn' %>
+      <%= f.submit "変更する", class: 'submit-button owner-registration-btn' %>
     </div>
   </div>
   <% end %>
