--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,104 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class='form-background user-registration-back'>
+  <%= render "shared/title_header" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+  <%= form_with model: @user, url: user_registration_path, class: 'form-main', local: true do |f| %>
+  <div class='form-field user-registration'>
+    <div class='form-header'>
+      <h2 class='form-title'>ユーザー登録の変更</h2>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= render "shared/error_messages", model: f.object %>
+
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>ニックネーム</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_area :nickname, class:"input-default", placeholder:"例）Kagu太 " %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>メールアドレス</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.email_field :email, class:"input-default", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>パスワード</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :password, class:"input-default", placeholder:"6文字以上の半角英数字" %>
+      <p>※英字、数字、どちらも必要です</p>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>パスワード(確認用)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :password_confirmation, class:"input-default", placeholder:"同じパスワードを入力" %>
+    </div>
+
+    <p class='form-middle-title'>ユーザー情報登録の変更</p>
+
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>お名前(全角)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-name-group'>
+        <%= f.text_area :last_name, class:"input-name", placeholder:"例) 佐藤" %>
+        <%= f.text_area :first_name, class:"input-name", placeholder:"例) かぐ太" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>お名前カナ(全角)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-name-group'>
+        <%= f.text_area :last_name_kana, class:"input-name", placeholder:"例) サトウ" %>
+        <%= f.text_area :first_name_kana, class:"input-name", placeholder:"例) カグタ" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>郵便番号</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.text_field :postal_code, class:"input-default", placeholder:"例) 123-4567" %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>生年月日</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <div class='input-birth'>
+        <%= raw sprintf(
+                    f.date_select(
+                      :birthday,
+                      use_month_numbers: true,
+                      prompt:'--',
+                      start_year: 1930,
+                      end_year: (Time.now.year - 10),
+                      date_separator: '%s'),
+                    "年", "月") + "日" %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class='form-text-group'>
+        <label class='form-text'>現在のパスワード(登録情報の変更にはパスワードが必要です)</label>
+        <span class='indispensable'>必須</span>
+      </div>
+      <%= f.password_field :current_password, autocomplete: "current-password", class:"input-default", placeholder:"現在のパスワードを入力" %>
+    </div>
+
+    <div class="form-button">
+      <%= f.submit "変更する", class: 'submit-button user-registration-btn' %>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+  <%= render "shared/footer" %>
+</div>
