オーナーマイページフロント修正

--- a/app/assets/stylesheets/owners/show.scss
+++ b/app/assets/stylesheets/owners/show.scss
@@ -31,8 +31,11 @@
 
 .mypage-btn-field {
   border-radius: 25px;
-  background-color:#e2ded3;
   padding: 3vh ;
+}
+
+.owner-btn-field {
+  background-color:#e2ded3;
 }
 
 .mypage-btn-group {
@@ -73,7 +76,7 @@
   color: #fff;
 }
 
-.mypage-edit-btn {
+.owner-edit-btn {
   background-color: #000;
   border-color: #00a5dd;
   color: #fff;
