--- a/app/assets/stylesheets/items/new.scss
+++ b/app/assets/stylesheets/items/new.scss
@@ -7,6 +7,11 @@
   background-color:#f5f5f5;
 }
 
+.form-image-group {
+  display: flex;
+  justify-content: space-between;
+}
+
 .click-upload {
   margin: 2% 0;
   min-width: 250px;
@@ -15,11 +20,14 @@
 
 .upload-attention {
   margin-bottom: 15px;
-}
-
-.upload-attention {
   margin-right: 8vw;
   font-size: 0.9em;
+}
+
+img {
+  height: 17vh;
+  width: 20vw;
+  object-fit: contain;
 }
 
 .item-info-input {
