--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -14,9 +14,12 @@
         <label class='form-text'>商品画像</label>
         <span class='indispensable'>必須</span>
       </div>
-      <div class='click-upload'>
-        <p class='upload-attention'>クリックしてファイルをアップロード</p>
-        <%= form.file_field :image %>
+      <div class='form-image-group'>
+        <div class='click-upload'>
+          <p class='upload-attention'>クリックしてファイルをアップロード</p>
+          <%= form.file_field :image %>
+        </div>
+        <div id='image-preview'></div>
       </div>
     </div>
     <div class="form-group">
